--- a/scripts/bosh-bootloader/build-final-release/task.yml
+++ b/scripts/bosh-bootloader/build-final-release/task.yml
@@ -14,5 +14,8 @@ inputs:
 outputs:
   - name: builds
 
+params:
+  BUMP_DEPLOYMENTS: false
+
 run:
   path: ci/scripts/bosh-bootloader/build-final-release/task
