--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -35,7 +35,7 @@ resources:
 - name: cf-deployment
   type: git
   source:
-    branch: develop
+    branch: master
     uri: https://github.com/cloudfoundry/cf-deployment.git
 
 - name: cf-deployment-concourse-tasks
